# Projecto

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: codequality.yml  docker-publish.yml  ecr-publish.yml
alembic/: env.py
alembic/versions/: .gitkeep  02c33b1aa82b_create_projects_and_project_members_.py  3d20a570cd3d_create_users_table.py  5e3bd75ac4cd_create_documents_table.py
docs/: commands.md
infra/: readme.md
infra/terraform/: README.md  ecr.tf  github_oidc.tf  outputs.tf  terraform.tfvars.example  test_ec2.tf  variables.tf  versions.tf
infra/terraform/templates/: test-user-data.sh.tftpl
projecto/: __init__.py  config.py  database.py  exceptions.py  logging.py  main.py  security.py  storage.py
projecto/auth/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
projecto/documents/: __init__.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
projecto/projects/: __init__.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
projecto/sharing/: exceptions.py  router.py  schemas.py  service.py
storage/: .gitkeep
tests/: conftest.py  test_auth.py  test_config.py  test_dbconnection.py  test_documents.py  test_health.py  test_projects.py  test_sharing.py
