[project]
name = "projecto"
version = "0.1.0"
description = "Project Management Software - backend API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pydantic-settings>=2.14.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest-asyncio>=1.4.0",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["projecto"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "S", "C4", "SIM", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "N"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[tool.coverage.run]
source = ["projecto"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
